Final header and footer

--- a/firstview-lettings-home.html
+++ b/firstview-lettings-home.html
@@ -8,167 +8,112 @@
     <title>Firstview Lettings</title>
     <style>
     </style>
-<link href="https://fonts.googleapis.com/css2?family=Arimo:wght@700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Domine&family=Lato&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Domine&family=Lato&display=swap" rel="stylesheet">
   </head>
-    <body>
 
-      <div class="wrap">
-          <header class="main-header">
-              <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
-                  <nav class="main-nav">
-                        <li><a  href="firstview-lettings-home.html">Home</a></li>
-                    <nav class="dropdown">
-                      <ul>
-                        <li><a href="landlords.html">Landlords</a></li>
-                              <div class="dropdown-content">
-                                <ul>
-                                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                                <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                                <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                                <li><a href="letting-management.html">Letting Management Service</a></li>
-                              </ul>
-                              </div>
-                      </ul>
-                    </nav>
-                    <nav class="dropdown">
-                      <ul>
-                        <li><a href="tenant-services.html">Tenants</a></li>
-                              <div class="dropdown-content">
-                                <ul>
-                                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                                <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
-                              </ul>
-                              </div>
-                      </ul>
-                    </nav>
-                    <nav class="dropdown">
-                      <ul>
-                        <li><a href="about-us.html">About Us</a></li>
-                              <div class="dropdown-content">
-
-                              </div>
-                      </ul>
-                    </nav>
-                    <nav class="dropdown">
-                      <ul>
-                        <li><a href="properties.html">Properties</a></li>
-                      </ul>
-                    </nav>
-                    <nav class="dropdown">
-                      <ul>
-                        <li><a href="php/index-contact.html">Contact Us</a></li>
-                              <div class="dropdown-content">
-                                <ul>
-                                <li><a href="php/index-contact.html">Enquiry Form</a></li>
-                                    </ul>
-                              </div>
-                      </ul>
-                    </nav>
-                  </nav>
+  <body>
+        <div class="wrap">
+          <header style="display:flex">
+            <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a></div>
+              <nav class="main-nav">
+                <a href="firstview-lettings-home.html">Home</a>
+                <a href="properties.html">Properties</a>
+                <div class="drp">
+                  <a href="landlord-services.html">Landlords</a>
+                    <div class="ondrop">
+                      <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                      <li><a href="tenant-introduction-service.html">Tenant Introduction Service</a></li>
+                      <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                      <li><a href="letting-management.html">Letting Management Service</a></li>
+                    </div>
+                </div>
+                <div class="drp">
+                <a href="tenant-services.html">Tenants</a>
+                  <div class="ondrop">
+                    <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                    <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
+                  </div>
+                </div>
+                <a href="about-firstview-lettings.html">About</a>
+                <a href="php/index-contact.html">Contact</a>
+              </nav>
           </header>
 
-         <main>
-
-                <div class="index-title">
-                  <h1>Providing residential property letting and management services in Nottinghamshire and Derbyshire</h1>
-                </div>
-
-                <div class="cstandard">
+          <main>
+            <div class="index-title">
+              <h1>Providing residential property letting and management services in Nottinghamshire and Derbyshire</h1>
+            </div>
+            <div class="cstandard">
+              <section>
                 <div class="intro">
                   <div class="opener">
-                    <h3>Trusted and Established</h3>
-                    <p>Since 2004 we've been providing residential property letting and management services to landlords and tenants.</p>
-                    <p>We provide a range of services in Nottinghamshire and Derbyshire's rural countryside towns and villages.</p>
-                    <h3>Reliable and Ready</h3>
-                    <p>We understand the importance of having hands-on and accesible landlords.</p>
-                    <h3>Comprehensive Services</h3>
-                    <p>By offering a range of services we're able to support the varied lifestyles of both investment landlords and experienced landlords, helping them to achieve their goals.</p>
-                    <h3>Modern Living</h3>
-                    <p>Perfect for families and individuals, we offer beautiful properties with modern fittings.</p>
-                </div>
+                      <h3>Trusted and Established</h3>
+                      <p>Since 2004 we've been providing residential property letting and management services to landlords and tenants.</p>
+                      <p>We provide a range of services in Nottinghamshire and Derbyshire's rural countryside towns and villages.</p>
+                      <h3>Reliable and Ready</h3>
+                      <p>We understand the importance of having hands-on and accesible landlords.</p>
+                      <h3>Comprehensive Services</h3>
+                      <p>By offering a range of services we're able to support the varied lifestyles of both investment landlords and experienced landlords, helping them to achieve their goals.</p>
+                      <h3>Modern Living</h3>
+                      <p>Perfect for families and individuals, we offer beautiful properties with modern fittings.</p>
+                  </div>
                   <div>
                     <h2>Services</h2>
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Tenancy Applications</li>
-                    <li class="list-group-item">Tenant Introduction Services</li>
-                    <li class="list-group-item">Tenant Introduction &amp; Inventory Prepartion Services</li>
-                    <li class="list-group-item">Letting Management Services</li>
-                  </ul>
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Tenancy Applications</li>
+                        <li class="list-group-item">Tenant Introduction Services</li>
+                        <li class="list-group-item">Tenant Introduction &amp; Inventory Prepartion Services</li>
+                        <li class="list-group-item">Letting Management Services</li>
+                      </ul>
+                  </div>
                 </div>
-
-                <!-- <aside> -->
-                  <!-- <p>Benefit from the convenience and accessibility of our services.</p>  -->
-                    <!-- <p>Property viewing appointments are arranged via email or telephone, and the review and signature of tenancy agreements are completed by return of post.</p> -->
-                    <!-- <p>Our website features modern one and two bedroom apartments, for single or dual occupancy, and houses where larger occupation is preffered or required.</p> -->
-                <!-- </aside> -->
-                            <!-- <p>15+ years of experience</p> -->
+              </section>
+                <!--Begin Bootstrap 4 Card Deck-->
+              <section>
+                <div class="line">
+                <h2>Featured Properties</h2>
+                <div class="card-deck">
+                  <div class="card .h-100">
+                    <img src="images/full-lakeview.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">One Bedroom Flat - Fishponds - Bristol</h5>
+                      <p class="card-text">Modern one bedroom, secure second floor flat, 1 mile from city center.</p>
+                      <a href="lakeview-apartments.html" class="btn btn-outline-danger">More Info</a>
+                    </div>
+                  </div>
+                  <div class="card .h-100">
+                    <img src="images/full-marine_gardens.gif" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">One Bedroom Flat - Coleford - Gloucester</h5>
+                      <p class="card-text">One bedroom, ground floor flat with double bedroom and modern kitchen.</p>
+                      <a href="properties.html" class="btn btn-outline-danger">More Info</a>
+                    </div>
+                  </div>
                 </div>
                 </div>
-
-
-<!-- Test bs4 -->
-<div class="cstandard">
-<div class="line ">
-  <h2 class="heading2">Featured Properties</h2>
-<div class="card-deck">
-  <div class="card .h-100">
-    <img src="images/full-lakeview.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">One Bedroom Flat - Fishponds - Bristol</h5>
-      <p class="card-text">Modern one bedroom, secure second floor flat, 1 mile from city center.</p>
-      <a href="lakeview-apartments.html" class="btn btn-outline-danger">More Info</a>
-    </div>
-  </div>
-  <div class="card .h-100">
-    <img src="images/full-marine_gardens.gif" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">One Bedroom Flat - Coleford - Gloucester</h5>
-      <p class="card-text">One bedroom, ground floor flat with double bedroom and modern kitchen.</p>
-      <a href="properties.html" class="btn btn-outline-danger">More Info</a>
-    </div>
-  </div>
-  </div>
-</div>
-</div>
-
-<div class="cstandard">
-<div class="leftfloat">
-<div class="cstandard">
-  <h3>Looking for a place to rent?</h3>
-    <h4> We've got you covered!</h4>
-    <p>Our selection of modern properties and hands-on letting management allows you to focus on the <b><i>important</i></b> things in your life.</p>
-  <a href ="properties.html"class="btn btn-danger btn-md col-3">View Properties</a>
-  <a href="php/index-contact.html" class="btn btn-outline-secondary btn-md col-3">Let's Chat</a>
-</div>
-</div>
-
-<div class="rightfloat">
-<div class="cstandard">
-  <h3>Have a property you want to let?</h3>
-  <h4>Let us help!</h4>
-  <p>Call us today to learn how we can put you in front of tenants.</p>
-  <a href ="properties.html"class="btn btn-danger btn-md col-3">View Services</a>
-  <a href="php/index-contact.html" class="btn btn-outline-secondary btn-md col-3">Let's Chat</a>
-</div>
-</div>
-</div>
-
-<!-- end test -->
-
-
-
-                  <!-- <section class="contact">
-                    <h2><a href="#">CONTACT</h2>
-                    <p>By Phone:</p>
-                    <p>07834 342897</p>
-                    <p>Email Us:</p>
-                    <a href="mailto:firstview.let@btinternet.com?subject=Enquiries" id="email">firstview.let@btinternet.com</a>
-                  </section> -->
-
-
+              </section>
+              <!-- End Bootstrap 4 Card Deck -->
+              <!-- Left and right float section -->
+              <section>
+                <div class="leftfloat">
+                  <h3>Looking for a place to rent?</h3>
+                    <h4> We've got you covered!</h4>
+                    <p>Our selection of modern properties and hands-on letting management allows you to focus on the <b><i>important</i></b> things in your life.</p>
+                  <a href ="properties.html"class="btn btn-danger btn-md col-3">View Properties</a>
+                  <a href="php/index-contact.html" class="btn btn-outline-secondary btn-md col-3">Let's Chat</a>
+                </div>
+                <div class="rightfloat">
+                  <h3>Have a property you want to let?</h3>
+                    <h4>Let us help!</h4>
+                    <p>Call us today to learn how we can put you in front of tenants.</p>
+                  <a href ="landlord-services.html"class="btn btn-danger btn-md col-3">View Services</a>
+                  <a href="php/index-contact.html" class="btn btn-outline-secondary btn-md col-3">Let's Chat</a>
+                </div>
+              </section>
             </div>
-        </main>
+          </main>
+        </div>
+        <!-- /* end wrap */ -->
 
         <footer class="main-footer">
           <div>
@@ -176,20 +121,20 @@
             <a href="tel:07834 342897">07834 342897</a><br>
             <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
           </div>
-          <div class="resources">
-            <span>Resources</span><br>
-            <a>The Property Ombudsman</a>
-          </div>
+          <span>
+            Firstview Lettings Ltd.<br>
+            Registration No: 5098005<br>
+            Registered Office:<br>
+            367B Church Rd, Frampton Cotterell,<br>
+            Bristol, BS36 2AQ
+          </span>
           <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
           <div>
            <a href="legal.html" id="legal">Legal Notices</a><br>
            <a href="">Privacy Policy</a>
-         </div>
-
-
-           <p class="webdev">Crafted by Firstview Lettings Ltd</p>
+          </div>
+          <span class="webdev">Crafted by Firstview Lettings Ltd</span>
         </footer>
-
 
   </body>
 </html>
