--- a/privacy-statement.html
+++ b/privacy-statement.html
@@ -8,91 +8,65 @@
   <body>
     <div class="wrap">
 
-    <header class="main-header">
-        <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
-            <nav class="main-nav">
-                  <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Landlords</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Tenants</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">About Us</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="properties.html">Properties</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="contact-us.html">Contact Us</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="contact-us.html">Enquiry Form</a></li>
-                          <li><a href="#">Telephone Contact: 07834 342897</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Company Details:
-                                Firstview Lettings Ltd.
-                                Registration No: 5098005
-                                Registered Office:
-                                367B Church Rd, Frampton Cotterell, Bristol, BS36 2AQ</a></li>
-                        </div>
-                </ul>
-              </nav>
-            </nav>
-    </header>
+      <header style="display:flex">
+        <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a></div>
+          <nav class="main-nav">
+            <a href="firstview-lettings-home.html">Home</a>
+            <a href="properties.html">Properties</a>
+            <div class="drp">
+              <a href="landlord-services.html">Landlords</a>
+                <div class="ondrop">
+                  <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                  <li><a href="tenant-introduction-service.html">Tenant Introduction Service</a></li>
+                  <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                  <li><a href="letting-management.html">Letting Management Service</a></li>
+                </div>
+            </div>
+            <div class="drp">
+            <a href="tenant-services.html">Tenants</a>
+              <div class="ondrop">
+                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
+              </div>
+            </div>
+            <a href="about-firstview-lettings.html">About</a>
+            <a href="php/index-contact.html">Contact</a>
+          </nav>
+      </header>
 
-<main>
-  <h1>Legal Notice - Privacy Statement</h1>
-  <div>
-  <p class="normal">Firstview Lettings Ltd recognises that privacy is an important concept in Internet usage and is therefore committed to ensuring that the privacy of our users is protected. You can keep up to date with any changes to Firstview Letting Ltd's privacy policy by checking this page.</p>
+      <main>
+        <h1 class="subp-title">Legal Notice - Privacy Statement</h1>
+        <div class="cstandard">
+          <p>Firstview Lettings Ltd recognises that privacy is an important concept in Internet usage and is therefore committed to ensuring that the privacy of our users is protected. You can keep up to date with any changes to Firstview Letting Ltd's privacy policy by checking this page.</p>
+            <p class="subheading">Collection and Usage</p>
+            <p>
+              Firstview Lettings Ltd collects usage statistics through our access log. This provides us with such details as visitor domain names, the time of visits, web browser, length of visit, IP address and referring domains. This information is used solely for the purpose of developing the business of Firstview Lettings Ltd. Firstview Lettings Ltd also uses forms to take customer enquiries. The information gathered from our forms is relevant only to the purpose of that form. This information is only used so that Firstview Lettings Ltd can answer customer queries.</p>
+            <p>The information gathered by Firstview Lettings Ltd will only be made available to those of our employees and business partners who need to see it in connection with the purpose for which you have provided the information. We will not pass your personal data to other organisations or individuals without your express consent.</p>
+            <p class="subheading">Implications</p>
+            <p>Use of the Firstview Lettings Ltd website indicates that you are willing to accept the content of this privacy policy. Sites that are linked to from Firstview Lettings Ltd may have their own privacy policy and these should be checked on arriving at another site from Firstview Lettings Ltd. Firstview Lettings Ltd can accept no responsibility for the privacy policies of these other sites and recommends users should always check the privacy policy of a site they visit.</p>
+      </div>
+      </main>
+      </div>
 
-<p class="subheading">Collection and Usage</p>
-<p class="normal">
-  Firstview Lettings Ltd collects usage statistics through our access log. This provides us with such details as visitor domain names, the time of visits, web browser, length of visit, IP address and referring domains. This information is used solely for the purpose of developing the business of Firstview Lettings Ltd. Firstview Lettings Ltd also uses forms to take customer enquiries. The information gathered from our forms is relevant only to the purpose of that form. This information is only used so that Firstview Lettings Ltd can answer customer queries.</p>
-
-<p class="normal">The information gathered by Firstview Lettings Ltd will only be made available to those of our employees and business partners who need to see it in connection with the purpose for which you have provided the information. We will not pass your personal data to other organisations or individuals without your express consent.</p>
-
-<p class="subheading">Implications</p>
-<p class="normal">Use of the Firstview Lettings Ltd website indicates that you are willing to accept the content of this privacy policy. Sites that are linked to from Firstview Lettings Ltd may have their own privacy policy and these should be checked on arriving at another site from Firstview Lettings Ltd. Firstview Lettings Ltd can accept no responsibility for the privacy policies of these other sites and recommends users should always check the privacy policy of a site they visit.</p>
-</div>
-</main>
-</div>
-
-<footer class="main-footer">
-   <span><a href="legal.html" id="legal">Legal Notices</span>
-   <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
-</footer>
-  <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
-  </body>
-</html>
+      <footer class="main-footer">
+        <div>
+          <span>Enquiries</span><br>
+          <a href="tel:07834 342897">07834 342897</a><br>
+          <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
+        </div>
+        <span>
+          Firstview Lettings Ltd.<br>
+          Registration No: 5098005<br>
+          Registered Office:<br>
+          367B Church Rd, Frampton Cotterell,<br>
+          Bristol, BS36 2AQ
+        </span>
+        <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+        <div>
+         <a href="legal.html" id="legal">Legal Notices</a><br>
+         <a href="">Privacy Policy</a>
+        </div>
+        <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+      </footer>
+        </body>
+      </html>
