--- a/properties.html
+++ b/properties.html
@@ -3,113 +3,97 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="firstview-lettings.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Properties</title>
   </head>
   <body>
-  <header class="main-header">
-      <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
+    <div class='wrap'>
+      <header style="display:flex">
+        <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a></div>
           <nav class="main-nav">
-                <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">Landlords</a></li>
-                      <div class="dropdown-content">
-                        <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                        <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                        <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                        <li><a href="letting-management.html">Letting Management Service</a></li>
-                      </div>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">Tenants</a></li>
-                      <div class="dropdown-content">
-                        <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                        <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
-                      </div>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="#">About Us</a></li>
-                      <div class="dropdown-content">
-                        <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                        <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                        <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                        <li><a href="letting-management.html">Letting Management Service</a></li>
-                      </div>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="properties.html">Properties</a></li>
-                      <div class="dropdown-content">
-                        <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                        <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                        <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                        <li><a href="letting-management.html">Letting Management Service</a></li>
-                      </div>
-              </ul>
-            </nav>
-            <nav class="dropdown">
-              <ul>
-                <li><a href="contact-us.html">Contact Us</a></li>
-                      <div class="dropdown-content">
-                        <li><a href="contact-us.html">Enquiry Form</a></li>
-                        <li><a href="#">Telephone Contact: 07834 342897</a></li>
-                        <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                        <li><a href="letting-management.html">Company Details:
-                              Firstview Lettings Ltd.
-                              Registration No: 5098005
-
-                              Registered Office:
-                              367B Church Rd, Frampton Cotterell, Bristol, BS36 2AQ</a></li>
-                      </div>
-              </ul>
-            </nav>
+            <a href="firstview-lettings-home.html">Home</a>
+            <a href="properties.html">Properties</a>
+            <div class="drp">
+              <a href="landlord-services.html">Landlords</a>
+                <div class="ondrop">
+                  <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                  <li><a href="tenant-introduction-service.html">Tenant Introduction Service</a></li>
+                  <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                  <li><a href="letting-management.html">Letting Management Service</a></li>
+                </div>
+            </div>
+            <div class="drp">
+            <a href="tenant-services.html">Tenants</a>
+              <div class="ondrop">
+                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
+              </div>
+            </div>
+            <a href="about-firstview-lettings.html">About</a>
+            <a href="php/index-contact.html">Contact</a>
           </nav>
-  </header>
+      </header>
 
     <main>
-    <div class='wrap'>
       <h1 class="subp-title">Properties</h1>
-      <h2>Lakeview Apartments - Fishponds - Bristol</h2>
-      <div class="lakeview">
+      <h2 class="tenants-center normal">Our focus is serving the rural areas of Nottinghamshire and Derbyshire.<br>
+          Review our listings below, then register your interest for properties in your area.<br>
+          We'll take it from there.</h2>
+      <div class="property-card">
         <img src="images/full-lakeview.jpg" alt="full size image of lakeview apartment">
-        <ul>
-          <li>Large lounge with seperate kitchen, includes fitted hob and built-in oven</li>
-          <li>Double bedroom</li>
-          <li>Bathroom with electric shower</li>
-          <li>One allocated parking space</li>
-        </ul>
+        <div>
+          <h2>Lakeview Apartments - Fishponds - Bristol</h2>
+          <ul class="cstandard">
+            <li>Large lounge with seperate kitchen, includes fitted hob and built-in oven</li>
+            <li>Double bedroom</li>
+            <li>Bathroom with electric shower</li>
+            <li>One allocated parking space</li>
+          </ul>
+        </div>
       </div>
       <div class="additional normal">
-      <span><a href="lakeview-apartments.html">Click here for more details</a></span>
-      <span>Available: Currently Let</span>
+        <span><a href="lakeview-apartments.html">Click here for more details</a></span>
+        <span>Availability: Currently Let</span>
       </div>
-      <h2>Marine Gardens - Coleford - Forest of Dean</h2>
-      <div class="marine-gardens">
-          <img src="images/full-marine_gardens.gif">
 
-          <ul>
-            <li>Large lounge with Kitchen area.</li>
-            <li>Double bedroom.</li>
-            <li>Modern kitchen units and bathroom suite with shower.</li>
-            <li>Off road car parking.</li>
+      <div class="property-card">
+        <img src="images/full-marine_gardens.gif">
+        <div>
+          <h2> Marine Gardens - Coleford - Forest of Dean</h2>
+          <ul class="cstandard">
+            <li>Large lounge with Kitchen area</li>
+            <li>Double bedroom</li>
+            <li>Modern kitchen units and bathroom suite with shower</li>
+            <li>Off road car parking</li>
           </ul>
-
-    </div>
+        </div>
+      </div>
     <div class="additional normal">
-    <span><a href="">Click here for more details</a></span>
-    <span>Available: Currently Let</span>
+      <span><a href="marine-gardens-apt.html">Click here for more details</a></span>
+      <span>Availability: Currently Let</span>
     </div>
-</div>
-</main>
-<footer class="main-footer">
-   <span><a href="legal.html" id="legal">Legal Notices</a></span>
-   <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
-</footer>
-<span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
+    </main>
+    </div>
+
+    <footer class="main-footer">
+      <div>
+        <span>Enquiries</span><br>
+        <a href="tel:07834 342897">07834 342897</a><br>
+        <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
+      </div>
+      <span>
+        Firstview Lettings Ltd.<br>
+        Registration No: 5098005<br>
+        Registered Office:<br>
+        367B Church Rd, Frampton Cotterell,<br>
+        Bristol, BS36 2AQ
+      </span>
+      <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+      <div>
+       <a href="legal.html" id="legal">Legal Notices</a><br>
+       <a href="">Privacy Policy</a>
+      </div>
+      <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+    </footer>
   </body>
 </html>
