--- a/tenancy_application.html
+++ b/tenancy_application.html
@@ -7,70 +7,36 @@
   </head>
   <body>
     <div class="wrap">
-    <header class="main-header">
-        <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
-            <nav class="main-nav">
-                  <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Landlords</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Tenants</a></li>
-                  <div class="dropdown-content">
-                    <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                    <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
-                  </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">About Us</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Properties</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Contact Us</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              </nav>
-    </header>
+      <header style="display:flex">
+        <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a></div>
+          <nav class="main-nav">
+            <a href="firstview-lettings-home.html">Home</a>
+            <a href="properties.html">Properties</a>
+            <div class="drp">
+              <a href="landlord-services.html">Landlords</a>
+                <div class="ondrop">
+                  <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                  <li><a href="tenant-introduction-service.html">Tenant Introduction Service</a></li>
+                  <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                  <li><a href="letting-management.html">Letting Management Service</a></li>
+                </div>
+            </div>
+            <div class="drp">
+            <a href="tenant-services.html">Tenants</a>
+              <div class="ondrop">
+                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
+              </div>
+            </div>
+            <a href="about-firstview-lettings.html">About</a>
+            <a href="php/index-contact.html">Contact</a>
+          </nav>
+      </header>
     <main>
 
       <h1 class="subp-title">Tenancy Applications</h1>
       <div class="cstandard">
-        <p>Tenancy Applications are assessed based on satisfactory responses to enquires about the applicants credit history. In addition, employers, bank and personal references will also be required to support the tenants application. In some circumstances, a guarantor may be required in order that the tenants application is acceptable.</p>
+        <p>Tenancy Applications are assessed based on satisfactory responses to enquiries about the applicants credit history. In addition, employers, bank and personal references will also be required to support the tenants application. In some circumstances, a guarantor may be required in order that the tenants application is acceptable.</p>
         <p>Credit history information is provided by specialised agencies who charge Firstview Lettings for this information.The charge for checking the applicants credit history is included in the <b>Application Fee</b>.</p>
         <p>Both tenant and landlord will be required to enter into an Assured Shorthold Tenancy Agreement with each other and which will be prepared by Firstview Lettings Ltd. Typically, such agreements have an initial minimum fixed term of 6 months duration. The preparation of an Inventory Schedule itemising the condition of the fixtures and fittings within the property is strongly recommended.</p>
         <p><b>Initial Payment</b> The tenant cannot be given the keys to a property for which a tenancy application is successful until the initial payment due to the landlord has been received by Firstview Lettings and has been cleared through the banking system. The initial payment is an amount equal to the first months rent plus a deposit bond of six weeks rent. The bond will be held by the Landlord as security against exceptional wear and tear or dilapidations in the condition of the property over the let period for which the tenant is responsible, and/or any other costs incurred by the Landlord which are the tenants responsibility under the agreement.</p>
@@ -79,8 +45,23 @@
     </main>
   </body>
   <footer class="main-footer">
-     <span><a href="legal.html" id="legal">Legal Notices</a></span>
-     <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+    <div>
+      <span>Enquiries</span><br>
+      <a href="tel:07834 342897">07834 342897</a><br>
+      <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
+    </div>
+    <span>
+      Firstview Lettings Ltd.<br>
+      Registration No: 5098005<br>
+      Registered Office:<br>
+      367B Church Rd, Frampton Cotterell,<br>
+      Bristol, BS36 2AQ
+    </span>
+    <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+    <div>
+     <a href="legal.html" id="legal">Legal Notices</a><br>
+     <a href="">Privacy Policy</a>
+    </div>
+    <span class="webdev">Crafted by Firstview Lettings Ltd</span>
   </footer>
-  <span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
 </html>
